@startuml Strategy
skinparam dpi 400
skinparam classAttributeIconSize 0
hide circle
/'-----Clases y subclases de soldado----'/
class Soldado {
    -id: int
    #nombre: String
    #vida: int
    #distancia: int
    #movimiento: Movimiento
    #ataque: Ataque
    #reporte: String
    /'-----Metodos----'/
    +muestraAvance(): void
    +muestraReporte(): void
    +muestraMovimiento(): void
}

class Infanteria{
    +Infanteria(distancia: int)
}


class Caballeria{
    +Caballeria(distancia: int)
}

class Artilleria{
    +Artilleria(distancia: int)
}

Soldado <|-- Infanteria
Soldado <|-- Caballeria
Soldado <|-- Artilleria

/'-----Strategy Movimiento----'/
interface Movimiento<<interface>>{
    moverse(): int
}

class MovimientoLento{
    moverse(): int
}

class MovimientoNormal{
    moverse(): int
}

class MovimientoRapido{
    moverse(): int
}
Movimiento <|.. MovimientoLento
Movimiento <|.. MovimientoNormal
Movimiento <|.. MovimientoRapido

Movimiento --o Soldado

/'-----Strategy Ataque----'/
interface Ataque<<interface>>{
    atacar(enemigo: Enemigo): void
}

class AtaqueMosquete{
    atacar(enemigo: Enemigo): void
}

class AtaqueCanon{
    atacar(enemigo: Enemigo): void
}

class AtaquePistola{
    atacar(enemigo: Enemigo): void
}

Ataque <|.. AtaqueMosquete
Ataque <|.. AtaqueCanon
Ataque <|.. AtaquePistola

Soldado o-- Ataque


@enduml
